#LBP-306 Fix vertical spacing

--- a/input.css
+++ b/input.css
@@ -267,5 +267,5 @@ span .MathJax_SVG{
   margin-block: 0.5rem;
 }
 .indent-fix {
-  margin-top: -1rem !important;
+  margin-top: -0.5rem !important;
 }
